compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__assert1.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 21
expression: "pub fn go(x) { let assert #(1, 2) = x }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn go(x) { let assert #(1, 2) = x }

----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let $ = x[0];
  if ($ === 1) {
    let $1 = x[1];
    if (!($1 === 2)) {
      throw makeError(
        "let_assert",
        FILEPATH,
        "my/mod",
        1,
        "go",
        "Pattern match failed, no pattern matched the value.",
        { value: x, start: 15, end: 37, pattern_start: 26, pattern_end: 33 }
      )
    }
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      1,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 15, end: 37, pattern_start: 26, pattern_end: 33 }
    )
  }
  return x;
}
