compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__catch_all_assert.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 304
expression: "\ntype Wibble {\n    Wibble(Int)\n    Wobble(Int)\n}\n\npub fn go() {\n  let assert _ = Wibble(1)\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type Wibble {
    Wibble(Int)
    Wobble(Int)
}

pub fn go() {
  let assert _ = Wibble(1)
  1
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

class Wibble extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}

class Wobble extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}

export function go() {
  let $ = new Wibble(1);
  
  return 1;
}
