compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__constant_assignments.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 63
expression: "\nconst a = True\n\npub fn go() {\n  a\n  let a = 10\n  a + 20\n}\n\nfn second() {\n  let a = 10\n  a + 20\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

const a = True

pub fn go() {
  a
  let a = 10
  a + 20
}

fn second() {
  let a = 10
  a + 20
}


----- COMPILED JAVASCRIPT
const a = true;

export function go() {
  a;
  let a$1 = 10;
  return a$1 + 20;
}
