compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assignments__escaped_variables_in_constants.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assignments.rs
assertion_line: 221
expression: "\npub const class = 5\npub const something = class\n"
snapshot_kind: text
---
----- SOURCE CODE

pub const class = 5
pub const something = class


----- COMPILED JAVASCRIPT
export const class$ = 5;

export const something = class$;
